# rust-analyzer

./: Cargo.toml  search-index.js
crates/mbe/src/: mbe_expander.rs  tests.rs
crates/mbe/src/mbe_expander/: matcher.rs  transcriber.rs
crates/mbe_benchmark/: Cargo.toml
crates/mbe_benchmark/src/: main.rs
hir/: all.html
hir_def/: all.html
ide/: struct.Analysis.html
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/ide/: diagnostics.rs.html  lib.rs.html
src/mbe/mbe_expander/: matcher.rs.html
src/rust_analyzer/: handlers.rs.html
